--- a/apps/sonify/src/styles/global/base.scss
+++ b/apps/sonify/src/styles/global/base.scss
@@ -15,6 +15,7 @@ html, body {
   text-size-adjust: 100%;
   width: 100%;
   line-height: var(--body-line-height);
+  overflow: hidden;
 }
 
 #app {
@@ -25,4 +26,5 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100vw;
+  overflow: hidden;
 }
